--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,35 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden; /* Prevenir scroll horizontal */
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 body {
   font-family: "Itim", cursive;
   font-weight: 400;
   font-style: normal;
+  touch-action: manipulation; /* Mejorar la experiencia táctil */
+  -webkit-tap-highlight-color: transparent; /* Eliminar el efecto de tap en móviles */
+}
+
+/* Asegurar que las imágenes y elementos interactivos sean de tamaño adecuado en móviles */
+button, 
+input[type="button"], 
+input[type="submit"] {
+  min-height: 44px; /* Tamaño mínimo para áreas táctiles */
+  min-width: 44px;
+}
+
+/* Mejora para pantallas de alta densidad */
+@media 
+(-webkit-min-device-pixel-ratio: 2), 
+(min-resolution: 192dpi) {
+  body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
 }
